if(WIN32)
    set(ELPS win.c)
    set(POPKCEL_MULTITHREAD OFF CACHE BOOL "" FORCE)
else()
    set(ELPS unix.c)
    if(BSD)
        list(APPEND ELPS bsd.c)
    else()
        list(APPEND ELPS linux.c)
    endif()
endif()

if(MSVC AND POPKCEL_FAKESYNC)
    enable_language(ASM_MASM)
    if(${CMAKE_SIZEOF_VOID_P} EQUAL 4)
        list(APPEND ELPS winx86.asm)
        set_source_files_properties(winx86.asm PROPERTIES COMPILE_FLAGS "/safeseh")
    else()
        list(APPEND ELPS winx64.asm)
    endif()
endif()

message(${ELPS})
add_library(popkcel ${ELBT} popkcel.c popkcel.h rbtree.c ${ELPS})
#add_definitions(-D_FORTIFY_SOURCE=0)

if(${ELBT} STREQUAL SHARED)
    #add_definitions(-DLIBPOPKCEL_SHARED)
    target_compile_definitions(popkcel PUBLIC LIBPOPKCEL_SHARED)
endif()

if(${POPKCEL_MULTITHREAD})
    find_package(Threads REQUIRED)
    target_link_libraries(popkcel PRIVATE Threads::Threads)
else()
    target_compile_definitions(popkcel PUBLIC POPKCEL_SINGLETHREAD)
endif()

if(NOT POPKCEL_FAKESYNC)
    target_compile_definitions(popkcel PUBLIC POPKCEL_NOFAKESYNC)
endif()

if(WIN32)
    target_link_libraries(popkcel PUBLIC WS2_32)
else()
    target_link_libraries(popkcel PUBLIC dl)
endif()

target_include_directories(popkcel PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
set_target_properties(popkcel PROPERTIES C_STANDARD 99 C_VISIBILITY_PRESET hidden)

add_library(Popkcel::Popkcel ALIAS popkcel)
